[tool.poetry]
name = "TBI"
version = "0.0.1"
description = "Table data viewer"
authors = ["Aziz Nadirov <aziznadirov@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyqt5 = "*"
pandas = "*"
duckdb = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
